--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -392,7 +392,7 @@
 								</div>
 								<div class="video-cover-wrap">
 									<div class="video-cover">
-										<span style="vertical-align: top;color: #666666;margin-right: 10px;"><span style="color: red; float: left;">*</span>封面</span>
+										<span style="vertical-align: top;color: #666666;margin-right: 10px;"><span style="color: white; float: left;">*</span>封面</span>
 										<span class="video-cover-pic" onclick="$('#video_picIpt').click()">
 											<p style="font-size: 90px;height: 100px;font-weight: 300;color: #d8d8d8;text-align: center;">+</p>
 											<p style="text-align: center;color: #999;font-size: 14px;">设置上传封面</p>
@@ -1095,14 +1095,13 @@
 								<span class="appointment-left z" style="height: 2px;"></span>
 								<div class="appointment-right z">										
 									<button type="button" class="accept-appointment" data-status="true">接受</button>
-									<button type="button" class="refuse-appointment" data-status="false">不接受</button>
+									<button type="button" class="refuse-appointment" data-status="false">拒绝</button>
 									<p class="appointment-tip">接受预约后，会发送预约成功短信给预约诊疗的弟子，请在预约时间内联系对方进行远程诊疗</p>
 								</div>
 							</div>
 						</div>
 						<!--弟子报名信息弹窗-->
-						<div class="disciple-inf-modal hide">
-						
+						<div class="disciple-inf-modal hide">					
 								<div class="disciple-inf-top">
 									<p>弟子报名信息</p>
 									<span>
