去掉收徒费用

--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -1930,13 +1930,13 @@
 								</textarea>
 							<p class="error-information error-welfare hide">福利不能为空</p>
 						</div>
-						<div class="comment-apprentice">
+						<!--<div class="comment-apprentice">
 							<span class="apprentice-left">费用</span>
 							<input type="text" class="price" style="ime-mode:disabled" placeholder="0" onkeyup='this.value=this.value.replace(/\D/gi,"")' />
 							<span class="apprentice-directions">熊猫币<span>(1元=10熊猫币)</span></span>
 							<p class="error-information error-price hide">请输入正确的价格</p>
 						
-						</div>
+						</div>-->
 						<div class="comment-apprentice" style="margin: 30px 0;">
 							<span class="apprentice-left" style="height: 2px;"></span>
 							<button type="button">保存</button>
