--- a/online-web/src/main/webapp/web/html/anchor/curriculum.html
+++ b/online-web/src/main/webapp/web/html/anchor/curriculum.html
@@ -2822,7 +2822,7 @@
 <script type="text/javascript" src="/web/js/cropbox.js"></script>
 <script src="/web/js/anchor/curriculum.js?v=ipandatcm_1.2.1" type="text/javascript" charset="UTF-8"></script>   <!--主播工作台控制左侧点击事件和判断input为空-->
 <!--主播工作台之前引入的图片上传js -->
-<!--<script src="/web/js/anchor/UploadPictures.js?v=ipandatcm_1.2.1" type="text/javascript" charset="UTF-8"></script>   <!--上传图片-->-->
+<!--<script src="/web/js/anchor/UploadPictures.js?v=ipandatcm_1.2.1" type="text/javascript" charset="UTF-8"></script>   <!--上传图片-->
 <script src="/web/js/date.js" type="text/javascript" charset="UTF-8"></script>
 <script src="/web/js/anchor/mymoney.js" type="text/javascript" charset="UTF-8"></script>
 <script src="/web/js/anchor/asset.js" type="text/javascript" charset="UTF-8"></script>
