弟子文字提示修改--测试直播倒计时

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -39,6 +39,9 @@
 <!-- 测试点击图片 -->
 
 	<style>
+	body{
+		/*background: red !important;*/
+	}
 		.middle-img {
 			position: absolute;
 			left: 259px;
@@ -991,7 +994,7 @@
 			<div class="therapy_title">
 				<span class="border"></span>
 				<span style="font-size: 0.28rem;float: left;">远程诊疗</span>
-				<span class="master_course_span">开放远程诊疗预约时间，仅弟子可预约</span>
+				<span class="master_course_span">一个间段仅可一名弟子预约</span>
 				<div class="both"></div>
 			</div>
 			<div class="subscribe_id">
