--- a/wechat/src/main/webapp/xcview/html/physician/consilia.html
+++ b/wechat/src/main/webapp/xcview/html/physician/consilia.html
@@ -49,7 +49,9 @@
 		/*opacity: 0.3;*/
 	}
 	.consilia_main{
-		margin-top: 0.88rem;
+		width: 7.5rem;
+	    margin: 0 auto;
+	    margin-top: 0.88rem;
 	}
 </style>
 </head>
