--- a/wechat/src/main/webapp/xcview/html/physician/index.html
+++ b/wechat/src/main/webapp/xcview/html/physician/index.html
@@ -33,6 +33,7 @@
 		width: 7.5rem !important;
 		height: 3.22rem;
 		/*padding: 0.2rem 0;*/
+		margin: 0 auto;
 		background: #fff;
 		margin-bottom: 0.2rem;
 		border-bottom: 1px solid #e6e6e6;
