图片动态--修改大小-删除裁剪。媒体报道添加---作者

--- a/wechat/src/main/webapp/xcview/html/physician/consilia.html
+++ b/wechat/src/main/webapp/xcview/html/physician/consilia.html
@@ -108,7 +108,7 @@
 			{{else if item.typeId == 7}}   <!--媒体报道-->
 				<div class="media">
 					<h2>{{item.title}}</h2>
-					<div class="media_time">{{item.createTime}}</div>
+					<div class="media_time"><span style="margin-right:0.2rem;">{{item.author}}</span>{{item.createTime}}</div>
 					<div class="consilia_textarea"></div>
 					<div class="medical_cases_time">本文来源：<span>{{item.url}}<span>。转载请注明出处</div>
 				</div>
