--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -545,7 +545,8 @@
 								<li>
 									<div class="am-gallery-item">
 										<a href="{{pic.imgUrl}}" class="">
-											<img src="{{pic.imgUrl}}?imageMogr2/thumbnail/!226x226r|imageMogr2/gravity/Center/crop/226x226" />
+											<!--<img src="{{pic.imgUrl}}?imageMogr2/thumbnail/!226x226r|imageMogr2/gravity/Center/crop/226x226" />-->
+											<img src="{{pic.imgUrl}}" />
 										</a>
 									</div>
 								</li>
