--- a/wechat/src/main/webapp/xcview/html/apprentice/information_registration.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/information_registration.html
@@ -18,7 +18,7 @@
 	<!-- 报名头部开始 -->
 	<header>
 		<div class="header">
-			<div class="return" onclick="location.href='/xcview/html/apprentice/inherited_introduction.html'"><img src="/xcview/images/back%20icon.png" alt="" /></div>
+			<div class="return" onclick="location.replace('/xcview/html/apprentice/inherited_introduction.html')"><img src="/xcview/images/back%20icon.png" alt="" /></div>
 			<!--<div class="return" onclick="window.history.back();"><img src="/xcview/images/back%20icon.png" alt="" /></div>-->
 			<div class="apply_title">报名信息</div>
 		</div>
@@ -121,7 +121,7 @@ window.onload = function(){
 	            }  
 	        }  
 	    });  
-	    window.history.pushState('/xcview/html/apprentice/information_registration.html', null, './information_registration.html');  
+	    window.history.replaceState('/xcview/html/apprentice/information_registration.html', null, './information_registration.html');  
 	}
 };
 </script>		
