提问页新ui修改-增加弹框跳转

--- a/wechat/src/main/webapp/xcview/html/physician/quiz.html
+++ b/wechat/src/main/webapp/xcview/html/physician/quiz.html
@@ -48,7 +48,19 @@
 		<textarea name="" id="" cols="" rows="" placeholder="描述您的问题" class="textarea"></textarea>
 	</div>
 	<div class="quiz">提问</div>
-	<!-- 中间内容结束 -->	
+	<!-- 中间内容结束 -->
+
+	<div class="prosperity_popout">
+		<div class="prosperity_popout_bg"></div>
+		<div class="prosperity_popout_main">
+			<div class="prosperity_popout_title">温馨提示
+			</div>
+			<div class="prosperity_cen">提问完成，医师解答后将会展示答案，请关注该医师。</div>
+			<div class="prosperity_popout_hide">我知道了</div>
+		</div>
+	</div>
+
+
 </body>
 <script type="text/javascript" src="/xcview/js/common/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
