动态图--修改比例缩放

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -545,7 +545,7 @@
 								{{each item.imgStr as pic }}
 								<li>
 									<div class="am-gallery-item">
-										<a href="{{pic.imgUrl}}" class="">
+										<a href="{{pic.imgUrl}}?imageView2/2/h/226" class="">
 											<!--<img src="{{pic.imgUrl}}?imageMogr2/thumbnail/!226x226r|imageMogr2/gravity/Center/crop/226x226" />-->
 											<img src="{{pic.imgUrl}}" />
 										</a>
