--- a/online-web/src/main/webapp/web/html/anchor/curriculum.html
+++ b/online-web/src/main/webapp/web/html/anchor/curriculum.html
@@ -189,9 +189,13 @@
 		<td>
 			{{course.title}}
 		</td>
-		<!--<td>-->
-		<!--{{course.courseLength}}'-->
-		<!--</td>-->
+		<td>
+			{{if course.teaching}}
+				师承
+			{{else}}
+				普通
+			{{/if}}
+		</td>
 		<td>
 			{{course.startTime}}
 		</td>
@@ -207,11 +211,11 @@
 		<td>
 			{{if course.liveStatus==1}}
 			<a href="javascript:;" onclick="startLive({{course.webinarId}})">进入直播</a>
-			<a href="javascript:;" onclick="startGuestLive({{course.webinarId}})">嘉宾进入</a>
+			<!--<a href="javascript:;" onclick="startGuestLive({{course.webinarId}})">嘉宾进入</a>-->
 			<a href="javascript:;" onclick="previewLive({{course.webinarId}})">直播预览</a>
 			{{else if course.liveStatus==2}}
 			<a href="javascript:;" onclick="startLive({{course.webinarId}})">进入直播</a>
-			<a href="javascript:;" onclick="startGuestLive({{course.webinarId}})">嘉宾进入</a>
+			<!--<a href="javascript:;" onclick="startGuestLive({{course.webinarId}})">嘉宾进入</a>-->
 			<a href="javascript:;" onclick="previewLive({{course.webinarId}})">直播预览</a>
 			{{else if course.liveStatus==0}}
 			<span>直播完成</span>
@@ -1289,7 +1293,7 @@
 							<tr>
 								<td>封面图</td>
 								<td>课程名称</td>
-								<!--<td>时长</td>-->
+								<td>直播类型</td>
 								<td>直播时间</td>
 								<td>直播状态</td>
 								<td>操作</td>
