测试--动态图。查看更多修改-直播间输入文字修改

--- a/wechat/src/main/webapp/xcview/html/details.html
+++ b/wechat/src/main/webapp/xcview/html/details.html
@@ -52,6 +52,7 @@ $(function(){
 	border-bottom: none;
 }
 
+
 /*  .cover{
 	display: none !important;
 } 
@@ -275,6 +276,9 @@ $(function(){
 }
 .coze_bottom input{
 	line-height: 0.6rem;
+}
+.coze_bottom input{
+	color: #333;
 }
 </style>
 </head>
