师承直播提示

--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -1236,6 +1236,7 @@
 							<button type="button" class="change-status">发布</button>
 						</div>
 						<div class="disciple-list-wrap">
+							<p class="disciple-tip-operate">操作说明：师承直播上架后,请前往<span>【主播工作台】-->【学堂】-->【直播】</span>进行直播</p>
 							<div class="disciple-search-main">
 								<select name="">
 									<option value="">全部</option>
