直播间倒计时--修改

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -752,6 +752,7 @@
 
 						<div class="count_down">
 							<div class="count_down_title" style="margin-top: 0rem;margin-bottom:0.4rem;"><span class="count_down_title_span">即将直播：</span>{{items.gradeName}}</div>
+							<div id="box2" style="font-size: 0.3rem;color: #FFFFFF;text-align: center;"></div>
 							<div id="box1"></div>
 						</div>
 					{{else if items.lineState == 3}}
