招生简章页--修改倒计时隐藏

--- a/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
@@ -47,7 +47,9 @@
             color: #F97B49;
             border-radius: 2px;
         }
-
+        #box1{
+            display: none;
+        }
     </style>
 </head>
 <body>
