--- a/wechat/src/main/webapp/xcview/html/physician/quiz.html
+++ b/wechat/src/main/webapp/xcview/html/physician/quiz.html
@@ -31,8 +31,8 @@
 		<div class="headers">
 				<p>提问</p>
 			</div>
-			<div class="arror_return" onclick="javascript:window.history.back();return false;">
-            <!-- <div class="arror_return" onclick="common_share_back();"> -->
+			<!-- <div class="arror_return" onclick="javascript:window.history.back();return false;"> -->
+            <div class="arror_return" onclick="common_share_back();">
 				<img src="/xcview/images/back icon.png" />
 			</div>
 			<!-- <div class="header_news">
