测试--提问返回。。学堂直播--直播

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -6,6 +6,10 @@
 <meta charset="UTF-8">
 <title>熊猫中医</title>
 
+<!-- <meta http-equiv="pragma" content="no-cache">  
+<meta http-equiv="Cache-Control" content="no-cache, must-revalidate">  
+<META http-equiv="expires" content="0">   -->
+
 <!--这段meta代码需要加上，移动端自适应缩放用-->
 <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 <meta name="keywords" content="" />
