--- a/wechat/src/main/webapp/xcview/html/physician/quiz.html
+++ b/wechat/src/main/webapp/xcview/html/physician/quiz.html
@@ -56,6 +56,7 @@
 			<div class="prosperity_popout_title">温馨提示
 			</div>
 			<div class="prosperity_cen">提问完成，医师解答后将会展示答案，请关注该医师。</div>
+			<!-- <div class="prosperity_popout_hide" onclick="self.location=document.referrer;">我知道了</div> -->
 			<div class="prosperity_popout_hide">我知道了</div>
 		</div>
 	</div>
