修改--搜索-学堂中医师

--- a/wechat/src/main/webapp/xcview/html/physician/reserve_information.html
+++ b/wechat/src/main/webapp/xcview/html/physician/reserve_information.html
@@ -12,9 +12,7 @@
 
 <link rel="stylesheet" type="text/css" href="/xcview/css/physician/reserve_information.css"/>
 <!-- <link rel="stylesheet" type="text/css" href="/xcview/css/alert/sharecss.css"/> -->
-
-<!-- 弹框 -->
-<link rel="stylesheet" type="text/css" href="/xcview/css/popups.css"/>
+<link rel="stylesheet" type="text/css" href="/xcview/css/popups.css"/> <!-- 公用弹框 -->
 
 <!--手机嵌入模板-->
 <script type="text/javascript" src="/xcview/js/common/layout.js"></script>
@@ -133,7 +131,7 @@
 <script type="text/javascript" src="/xcview/js/common/common.js"></script> 
 <!-- 公用弹框 -->
 <!-- <script type="text/javascript" src="/xcview/js/common/alertPopShow.js"></script> -->
-<script type="text/javascript" src="/xcview/js/common/popups.js"></script>
+<script type="text/javascript" src="/xcview/js/common/popups.js"></script>  <!-- 公用弹框 -->
 <script type="text/javascript" src="/xcview/js/common/template.js"></script>    <!--数据模板引入--> 
 <script type="text/javascript" src="/xcview/js/physician/reserve_information.js"></script>
 </html>
